<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.courtcounter.MainActivity"
    android:background="@drawable/koszykowka">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            tools:context=".MainActivity">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:padding="4dp"
                android:text="@string/team_a"
                android:textSize="25sp"
                android:textColor="@android:color/white"/>

            <TextView
                android:id="@+id/team_a_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:padding="4dp"
                android:textSize="20sp"
                android:textColor="@android:color/white"
                android:text="@string/_0" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:onClick="trzyA"
                android:text="@string/_3_points"
                android:background="#D9934B" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:onClick="dwaA"
                android:background="#D9934B"
                android:text="@string/_2_points" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:onClick="wolnyA"
                android:background="#D9934B"
                android:text="@string/free_throw" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            tools:context=".MainActivity">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:padding="4dp"
                android:text="@string/team_b"
                android:textSize="25sp"
                android:textColor="@android:color/white"/>

            <TextView
                android:id="@+id/team_b_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:padding="4dp"
                android:text="@string/_0"
                android:textSize="20sp"
                android:textColor="@android:color/white"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:onClick="trzyB"
                android:text="@string/_3_points"
                android:background="#D9934B"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:onClick="dwaB"
                android:text="@string/_2_points"
                android:background="#D9934B"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:onClick="wolnyB"
                android:text="@string/free_throw"
                android:background="#D9934B"/>

        </LinearLayout>


    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="40dp"

        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:onClick="RESET"
        android:text="@string/reset"
        android:background="@android:color/black"
        android:textColor="#FF0000"
        android:textStyle="bold"
        android:textSize="20dp"/>

</RelativeLayout>
